--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+:root {
+  --black: #212121;
+  --gray: #F7F6F6;
+  --blue: #033B9E;
+  --white: #fff;
+  --blue-gray: #064fce;
+  --gray-black: #c0c0c0;
+  --blue-white: #6486ce;
+  --green: #5fc056;
+  --red: #c05656;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  margin-top: 50px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  /* min-height: 100vh; */
 }
 
-.App-link {
-  color: #61dafb;
+.header-button {
+  padding: 5px 10px;
+  font-size: 16px;
+  background: var(--blue);
+  color: var(--white);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background .2s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header-button:hover {
+  background: var(--blue-gray);
+}
+
+.right {
+  margin-right: 10px;
 }
